--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hola Mundo
+<html>
+  <head>
+    <title>Mi primera página en Git</title>
+  </head>
+  <body>
+    <h1> MI PRIMERA PÁGINA </h1>
+  </body>
+</html>
