--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hola Mundo
+<html>
+  <head>
+    <title>Mi primera web GIT</title>
+  </head>
+  <body>
+    <h1>Mi primera web GIT</h1>
+  </body>
+</html>
