--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>Mi primera página en Git</title>
+    <title>Mi primera web GIT</title>
   </head>
   <body>
-    <h1> MI PRIMERA PÁGINA </h1>
+    <h1>Mi primera web GIT</h1>
   </body>
 </html>
