--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>Mi primera web GIT</title>
   </head>
   <body>
-    <h1>Mi primera web GIT</h1>
+    <h1>Juan Cerrón</h1>
   </body>
 </html>
