--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Mi primera web GIT</title>
+    <title>Mi primera web GIT 2</title>
   </head>
   <body>
     <h1>Juan Cerrón</h1>
